<resources>
    <string name="app_name">NoteIt</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_note">Save</string>
    <string name="action_delete_note">Delete</string>
    <string name="action_delete_all_note">Delete all</string>
    <!-- Strings used for fragments for navigation -->
    <string name="notes_fragment_label">Notes</string>
    <string name="todos_fragment_label">Todos</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="note_title">TITLE</string>
    <string name="update_note">UPDATE</string>
    <string name="text">text</string>
    <string name="date">Date</string>
    <string name="note_saved_message">Note saved!</string>
    <string name="no_notes_found">no notes found</string>
    <string name="add_note">Add Note</string>
    <string name="todo_title">Todo</string>
    <string name="todo_time_picker">Todo time picker</string>
    <string name="todo_priority_tag">Todo priority tag</string>
</resources>